Fix spacing between file-editor and page-title.

--- a/app/assets/stylesheets/pages/editor.scss
+++ b/app/assets/stylesheets/pages/editor.scss
@@ -199,6 +199,7 @@
   display: inline-block;
   border-right: 1px solid $border-color;
   padding-right: 15px;
+  margin-bottom: 30px;
 }
 
 .templates-title {
